.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__Filter__c.object
<CustomObject>
    <fields>
        <fullName>Dataplier__Boolean_Logic__c</fullName>
        <label>Boolean Logic</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Query_Expression_Child__c</fullName>
        <label>Query Expression Child</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Query_Expression__c</fullName>
        <label>Query Expression</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <label>Filter</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>